Fix overflow of table

--- a/vizro-core/src/vizro/static/css/table.css
+++ b/vizro-core/src/vizro/static/css/table.css
@@ -43,11 +43,14 @@ div.right_side
   font-size: 14px;
 }
 
-div.right_side .table-title {
+.table-title {
   padding-bottom: 14px;
 }
 
-div.right_side .table-container {
+.table-container {
+  height: 100%;
+  overflow: auto;
   padding: 12px;
   padding-left: 18px;
+  width: 100%;
 }
